package com.stategy.behavior;

/**
 * Author Eirunye
 * Created by on 2018/8/31.
 * Describe 定义了一个提交的行为称为一簇"算法"
 * 这可以是一个抽象类火或者是一个接口
 */
public interface SubmissionBehavior {

     void commit();
}
